# tagpilot-lib

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  NPM_ARTIFACTS_SETUP.md  README.md  browser.js  convert-from-mp3.mjs  generate-npm-packages.js  generate-test-data.js  index.d.ts  index.js  package-lock.json  package.json  tagpilot-lib.wasi-browser.js  tagpilot-lib.wasi.cjs  tagpilot_lib.wasi-browser.js  tagpilot_lib.wasi.cjs
.cargo/: config.toml
.github/workflows/: CI.yml  benchmark.yml
__test__/: index.spec.ts
benchmark/: bench.ts  package-lock.json  package.json
examples/: README.md  clear-tags-example.js  cover-image-buffer-example.js  cover-image-example.js  helper.js  read-cover-image-example.js  read-tags-example.js  read-tags-from-buffer-example.js  write-tags-example.js  write-tags-to-buffer-example.js
scripts/: README.md  convert-from-mp3.mjs  generate-npm-packages.mjs  generate-test-data.mjs  prepare-benchmark-files.mjs  run-benchmark.mjs  security-utils.mjs
src/: lib.rs  util.rs
test-files/: 01.aac  01.m4a  01.opus  01.spx  02.opus  02.spx  03.aac  03.m4a  03.opus  03.spx  04.opus  04.spx  05.aac  05.m4a  05.opus  05.spx  manifest.json
