
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "tagpilot_lib"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
lofty       = "0.22.4"
napi        = { version = "3", features = ["async"] }
napi-derive = "3.0.0"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
tokio       = { version = "1.0", features = ["rt"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
