
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "tagpilot_lib"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
infer       = "0.19.0"
lofty       = "0.22.4"
napi-derive = "3.0.0"
serde_json  = "1.0"

  [dependencies.napi]
  features = ["async"]
  version  = "3"

  [dependencies.serde]
  features = ["derive"]
  version  = "1.0"

  [dependencies.tokio]
  features = ["rt"]
  version  = "1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"

[dev-dependencies]
base64     = "0.22"
tokio      = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
